<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AutoDeInfracao">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/titulo_auto_de_infracao"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/id_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nome_do_autoado"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/id_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cidade_do_autuado"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/id_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro_do_autuado"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/id_endereco_do_autoado"
                    android:layout_width="320sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco_do_autuado" />

                <EditText
                    android:id="@+id/id_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_weight="1"
                    android:hint="@string/numero" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/id_cep"
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/id_uf"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/uf"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <EditText
                android:id="@+id/id_cpf_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf_cnpj"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/id_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone_do_autuado"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/id_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/celular_autuado"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>