<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_label_matricula"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:text="@string/mat" />

        <TextView
            android:id="@+id/id_label_insc"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/insc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:textColor="@android:color/black"
            android:textSize="18sp">

            <TextView
                android:id="@+id/id_label_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/status" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_view_matricula"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/id_view_insc"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/id_status_impressora"
                android:layout_width="20sp"
                android:layout_height="20sp"
                app:srcCompat="@drawable/un_send_impressora" />

            <ImageView
                android:id="@+id/id_status_whatsaap"
                android:layout_width="20sp"
                android:layout_height="20sp"
                app:srcCompat="@drawable/un_send_whatsapp1" />

            <ImageView
                android:id="@+id/id_status_email"
                android:layout_width="20sp"
                android:layout_height="20sp"
                app:srcCompat="@drawable/un_send_email" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <TextView
            android:id="@+id/id_view_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/rua" />

        <TextView
            android:id="@+id/id_view_logradouro"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:text="@string/numero" />

        <TextView
            android:id="@+id/id_view_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
